terraform/modules/vpc/main.tf
resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr

  enable_dns_support   = true
  enable_dns_hostnames = true


  tags = {

    Name = "shopsphere-vpc"

  }

}


resource "aws_subnet" "public" {

  count = length(var.public_subnets)

  vpc_id = aws_vpc.main.id

  cidr_block = var.public_subnets[count.index]

  availability_zone = var.azs[count.index]

  map_public_ip_on_launch = true


  tags = {

    Name = "shopsphere-public-${count.index + 1}"

  }

}


resource "aws_subnet" "private_app" {

  count = length(var.private_app_subnets)

  vpc_id = aws_vpc.main.id

  cidr_block = var.private_app_subnets[count.index]

  availability_zone = var.azs[count.index]


  tags = {

    Name = "shopsphere-private-app-${count.index + 1}"

  }

}


resource "aws_subnet" "private_db" {

  count = length(var.private_db_subnets)

  vpc_id = aws_vpc.main.id

  cidr_block = var.private_db_subnets[count.index]

  availability_zone = var.azs[count.index]


  tags = {

    Name = "shopsphere-private-db-${count.index + 1}"

  }

}


resource "aws_internet_gateway" "main" {

  vpc_id = aws_vpc.main.id


  tags = {

    Name = "shopsphere-igw"

  }

}


resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id

  }


  tags = {

    Name = "shopsphere-public-rt"

  }

}


resource "aws_route_table_association" "public" {

  count = length(var.public_subnets)

  subnet_id = aws_subnet.public[count.index].id

  route_table_id = aws_route_table.public.id

}

resource "aws_eip" "nat"{


domain="vpc"


tags={

Name="shopsphere-nat-eip"

}


}

resource "aws_nat_gateway" "main"{


allocation_id = aws_eip.nat.id


subnet_id = aws_subnet.public[0].id



tags={

Name="shopsphere-nat"

}



depends_on=[

aws_internet_gateway.main

]


}

resource "aws_route_table" "private"{


vpc_id = aws_vpc.main.id



route {


cidr_block="0.0.0.0/0"


nat_gateway_id=aws_nat_gateway.main.id


}



tags={


Name="shopsphere-private-rt"


}


}
resource "aws_route_table_association" "private_app"{


count=length(var.private_app_subnets)


subnet_id=aws_subnet.private_app[count.index].id


route_table_id=aws_route_table.private.id


}
